--- a/.i3/config
+++ b/.i3/config
@@ -36,8 +36,7 @@ set $mod Mod4
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec termite
-#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -105,30 +104,30 @@ bindsym $mod+Shift+minus move scratchpad
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+minus scratchpad show
-
+set $pi /ᐠ｡ꞈ｡ᐟ&#92;
 # switch to workspace
-bindsym $mod+1 workspace 1O.O
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9^_^
+bindsym $mod+1 workspace "1^.^"
+bindsym $mod+2 workspace "2$pi"
+bindsym $mod+3 workspace "3$pi"
+bindsym $mod+4 workspace "4$pi"
+bindsym $mod+5 workspace "5$pi"
+bindsym $mod+6 workspace "6$pi"
+bindsym $mod+7 workspace "7$pi"
+bindsym $mod+8 workspace "8$pi"
+bindsym $mod+9 workspace "9$pi"
 bindsym $mod+0 workspace "10>.&lt;"
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1O.O
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9^_^
-bindsym $mod+Shift+0 move container to workspace "10>.&ly;"
+bindsym $mod+Shift+1 move container to workspace "1^.^"
+bindsym $mod+Shift+2 move container to workspace "2$pi"
+bindsym $mod+Shift+3 move container to workspace "3$pi"
+bindsym $mod+Shift+4 move container to workspace "4$pi"
+bindsym $mod+Shift+5 move container to workspace "5$pi"
+bindsym $mod+Shift+6 move container to workspace "6$pi"
+bindsym $mod+Shift+7 move container to workspace "7$pi"
+bindsym $mod+Shift+8 move container to workspace "8$pi"
+bindsym $mod+Shift+9 move container to workspace "9$pi"
+bindsym $mod+Shift+0 move container to workspace "10>.&lt;"
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -166,10 +165,17 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3blocks
+	i3bar_command i3bar -t
 	strip_workspace_numbers yes
+	tray_output none
+	colors {
+		background #000000CC
+		inactive_workspace #000000CC #000000CC #FFFFFF
+		focused_workspace #00AD9C55 #00AD9C55 #FFFFFF
+	}
 }
-
+exec --no-startup-id "compton"
 #Disable window titlebars for i3-gaps
 for_window [class="^.*"] border pixel 0
 
@@ -187,4 +193,4 @@ bindsym $mod+Shift+f exec "firefox"
 for_window [window_role="pop-up"] floating enable
 
 #Upon startup
-exec_always --no-startup-id i3-msg "workspace 10Transmission; exec firefox gmail.com messenger.com github.com reddit.com ticktick.com simplenote.com; workspace 1"
+#exec_always --no-startup-id i3-msg "workspace 10Transmission; exec firefox gmail.com messenger.com github.com reddit.com ticktick.com simplenote.com; workspace 1"
